--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="res-div">
                 <ul class="nav-menu">
                     <li><a href="#location">Locations</a></li>
-                    <li><a href="#">Our Menu</a></li>
+                    <li><a href="#our-menu">Our Menu</a></li>
                     <li><a href="#">Meet Our Team</a></li>
                     <li><a href="#">Own A Clean Juice</a></li>
                     <li><a href="#">Contact Us</a></li>
