added smooth scroll to different sections

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="logo"><a href=""><img src="img/clean-juice-logo.png" alt="clean-juice-logo"></a></div>
             <div class="res-div">
                 <ul class="nav-menu">
-                    <li><a href="#location">Locations</a></li>
-                    <li><a href="#our-menu">Our Menu</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
-                    <li><a href="#">Own A Clean Juice</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#home">Own A Clean Juice</a></li>
+                    <li><a href="#app">Our App</a></li>
+                    <li><a href="#product">Our Menu</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#location">Location</a></li>
 
                 </ul>
                 <form action="" class="search">
@@ -49,7 +49,7 @@
 
         <!-- Main Content Area -->
         <div class="content-wrapper">
-            <div class="content">
+            <div class="content" id="home">
                 <div class="tagline">Find your clean juice</div>
                 <div class="pages"><span>2</span>/21</div>
                 <div class="swiper-container juice-container">
@@ -63,11 +63,11 @@
                                 </div>
                                 <div class="leaves">
                                     <ul class="scene">
-                                        <li class="layer" data-depth="-.1"><img src="img/leaf-1.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-1.png" alt="leaf"></li>
 
-                                        <li class="layer" data-depth="-1.2"><img src="img/leaf-3.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".1"><img src="img/leaf-4.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".2"><img src="img/leaf-5.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-3.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-4.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-5.png" alt="leaf"></li>
                                     </ul>
                                 </div>
                             </div>
@@ -79,11 +79,11 @@
                                 </div>
                                 <div class="leaves">
                                     <ul class="scene">
-                                        <li class="layer" data-depth="-.1"><img src="img/leaf-1.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-1.png" alt="leaf"></li>
 
-                                        <li class="layer" data-depth="-1.2"><img src="img/leaf-3.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".1"><img src="img/leaf-4.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".2"><img src="img/leaf-5.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-3.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-4.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-5.png" alt="leaf"></li>
                                     </ul>
                                 </div>
                             </div>
@@ -95,11 +95,11 @@
                                 </div>
                                 <div class="leaves">
                                     <ul class="scene">
-                                        <li class="layer" data-depth="-.1"><img src="img/leaf-1.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-1.png" alt="leaf"></li>
 
-                                        <li class="layer" data-depth="-1.2"><img src="img/leaf-3.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".1"><img src="img/leaf-4.png" alt="leaf"></li>
-                                        <li class="layer" data-depth=".2"><img src="img/leaf-5.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-3.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-4.png" alt="leaf"></li>
+                                        <li class="layer"><img src="img/leaf-5.png" alt="leaf"></li>
                                     </ul>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
 
 
             </div>
-            <section class="app-section col-2">
+            <section class="app-section col-2" id="app">
                 <div class="img-div">
                     <img src="img/screen (replace with image fill).png" alt="">
                 </div>
@@ -154,7 +154,7 @@
                 </div>
 
             </section>
-            <section class="product-section">
+            <section class="product-section" id="product">
                 <h1 class="section-title"><span>Menu</span> suited to your <br>expectations</h1>
                 <div class="swiper-container product-container">
                     <!-- Additional required wrapper -->
@@ -243,7 +243,7 @@
                     <!-- <div class="swiper-scrollbar"></div> -->
                 </div>
             </section>
-            <section class="blog-section">
+            <section class="blog-section" id="blog">
                 <h1 class="section-title"><span>Latest</span> News</h1>
                 <div class="blog-div">
                     <div class="img-div">
