added scroll to top function and footer links

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <footer>
             <div class="social">
                 <div class="logo">
-                    <a href="">
+                    <a href="index.html">
                         <img src="img/clean-juice-logo.png" alt="clean-juice-logo">
                     </a>
 
@@ -351,12 +351,12 @@
                 </div>
             </div>
             <ul class="footer-menu">
-                <li><a href="#location">Locations</a></li>
-                <li><a href="#">Our Menu</a></li>
-                <li><a href="#">Meet Our Team</a></li>
-                <li><a href="#">Own A Clean Juice</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <div class="back-btn">
+                <li><a href="#home">Own A Clean Juice</a></li>
+                <li><a href="#app">Our App</a></li>
+                <li><a href="#product">Our Menu</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#location">Location</a></li>
+                <div class="back-btn" id="scroll-top">
                     <i class='bx bxs-chevron-up'></i>
                     Back To Top
                 </div>
